# NACOS-VOTING-PORTAL

./: .gitignore  vercel.json
backend/: pyproject.toml  requirements.txt
backend/config/: settings.py  urls.py
backend/core/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_category_description_category_icon_name_and_more.py  0003_alter_project_track.py  0004_category_track.py  0005_category_voting_open.py  0006_project_level_project_matric_number.py  0007_project_selected.py  0008_voter_password_hash.py
backend/judging/: admin.py  models.py  serializers.py  urls.py  views.py
backend/judging/migrations/: 0001_initial.py  0002_remove_scorecriterion_category_judge_bio_and_more.py
backend/payments/: admin.py  models.py  signals.py
backend/payments/migrations/: 0001_initial.py  0002_alter_payment_status.py
docs/: nacos-voting-portal-2day-roadmap.md  nacos-voting-portal-implementation-plan.md  results_implementation_plan.md
frontend/: eslint.config.js  index.html  package.json  tsconfig.app.json  vercel.json  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/api/: apiCall.ts  dashboardAPI.ts  judgingAPI.ts  registerAPI.ts  resultsAPI.ts
frontend/src/app/: Landing.tsx
frontend/src/constants/: data.ts  dummy.ts
frontend/src/hooks/: useCountdown.ts
frontend/src/pages/: LandingPage.tsx  NotFoundPage.tsx  RegisterProjectPage.tsx  ReserveSeatPage.tsx
frontend/src/routes/: $.tsx  __root.tsx  dashboard.tsx  demo.tsx  home.tsx  index.tsx  register.tsx  (+3 more)
(+53 files in other folders)
