[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "cloudinary>=1.45.0",
    "daphne>=4.2.2",
    "dj-database-url>=3.1.2",
    "django>=6.0.7",
    "django-cors-headers>=4.9.0",
    "django-filter>=26.1",
    "djangorestframework>=3.17.1",
    "psycopg2-binary>=2.9.12",
    "python-decouple>=3.8",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
