[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudinary>=1.45.0",
    "dj-database-url>=3.1.2",
    "django>=6.0.7",
    "django-cors-headers>=4.9.0",
    "django-filter>=26.1",
    "djangorestframework>=3.17.1",
    "gunicorn>=26.0.0",
    "psycopg2-binary>=2.9.12",
    "python-decouple>=3.8",
    "python-dotenv>=1.2.2",
]
